--- a/src/style/css.css
+++ b/src/style/css.css
@@ -11,6 +11,7 @@ header {
     margin-top: 50px;
     height: 200px;
     background-color: blue;
+    overflow:auto;
 }
 #inputGastos{
     height: 40px;
@@ -33,4 +34,5 @@ header {
     margin-top: 50px;
     height: 200px;
     background-color: black;
+    overflow: auto;
 }
