Adicionada a funcionalidade de soma
Atualmente somente a soma entre os gastos está escrita em código, mas devo utilizar o mesmo código para os ganhos. Pensando também, em posteriormente fazer uma refatoração, e criar uma função que seja chamada para os dois, para 'limpar o código'.

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -33,6 +33,7 @@ header {
 #ganhos {
     margin-top: 50px;
     height: 200px;
-    background-color: black;
+    background-color: red;
     overflow: auto;
+    text-align: justify;
 }
