Funcionalidades Iniciais feitas!
Após quebrar um pouco a cabeça, as funcionalidades iniciais estão funcionando.
Possível adicionar gastos e faturamentos.
O algoritmo faz o cálculo assim que adicionado o valor, em seguida mostra o total liquido.
Antes de dar um toque visual, pretendo adicionar um banco de dados, e também  mais funcionalidades, como alterar a lista, modificar o nome e remover o elemento da lista.

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -10,7 +10,7 @@ header {
 #gastos {
     margin-top: 50px;
     height: 200px;
-    background-color: blue;
+    background-color: red;
     overflow:auto;
 }
 #inputGastos{
@@ -18,6 +18,17 @@ header {
     justify-content: center;
     margin: 10px auto;
     text-align: center;
+}
+
+#totalGastos{
+    background-color: red;
+    width: 60%;
+    height: 50px;
+    text-align: center;
+    justify-content:center;
+    align-items: center;
+    margin: auto;
+    font-size: 1.2em;
 }
 
 .botãoInput1{
@@ -31,9 +42,30 @@ header {
     text-align: center;
 }
 #ganhos {
-    margin-top: 50px;
+    margin-top: 137px;
     height: 200px;
-    background-color: red;
+    background-color: green;
     overflow: auto;
     text-align: justify;
+}
+#totalGanhos{
+    background-color: green;
+    width: 60%;
+    height: 50px;
+    text-align: center;
+    justify-content:center;
+    align-items: center;
+    margin: auto;
+    font-size: 1.2em;
+}
+#totalLiq{
+    background-color: blue;
+    width: 60%;
+    height: 50px;
+    text-align: center;
+    justify-content:center;
+    align-items: center;
+    margin: 130px auto;
+    font-size: 1.2em;
+
 }
