--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/css.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-
-    <title>Finanças Aí</title>
+<%- include('../includes/head.ejs') %>
   </head>
   <body>
-    <header class="main-header">
-      <button id="side-menu-toggle">
-        <span class="material-symbols-outlined"> menu </span>
-      </button>
-      <span class="logo">F.ai</span>
-    </header>
+    <%- include('../includes/nav.ejs')%>
   </body>
 </html>
