--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -36,20 +36,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #000220;
 }
 
 #menu {
+  padding: 50;
   position: absolute;
+  display: flex;
   font-size: 2rem;
-  top: 15rem;
+  top: 3rem;
   line-height: 150px;
   left: 32%;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   display: none;
 }
+
 #nav.active #menu {
   display: flex;
-  list-style: none;
 }
