--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,23 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/index.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <%- include('../includes/nav.ejs')%>
+    <div class="main_index" class="wrapper">
+        <div class="main_card" >
+          <h2> Tá esperando o quê para por suas finanças em dia?</h2>
+        </div>
+        <div class="break"></div>
+        <div class="main_card" id="login">LOGIN</div>
+        <div class="main_card" id="login">CADASTRO</div>
+        <form class="form_login">
+          <label>Úsuario:&nbsp</label><input type='text'>
+          <label>&nbspSenha:&nbsp</label><input type='text'>  
+        </form>
+        <div class="card_app"><h2>Por que usar nossa aplicação?</h2></div>
+        
+      </div>
+      
   </body>
 </html>
