--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,14 +9,19 @@
           <h2> Tá esperando o quê para por suas finanças em dia?</h2>
         </div>
         <div class="break"></div>
-        <div class="main_card" id="login">LOGIN</div>
-        <div class="main_card" id="login">CADASTRO</div>
-        <form class="form_login">
-          <label>Úsuario:&nbsp</label><input type='text'>
-          <label>&nbspSenha:&nbsp</label><input type='text'>  
-        </form>
-        <div class="card_app"><h2>Por que usar nossa aplicação?</h2></div>
-        
+        <div class="main_card" id="login">
+          <span class="material-symbols-outlined">
+          person
+          </span>
+          LOGIN
+        </div>
+        <div class="main_card" id="login"><span class="material-symbols-outlined">
+          person_add
+          </span>
+          &nbspCADASTRO
+        </div>
+        <div class="card_app"><h2><a href="/sobre">Saiba mais sobre o app</a></h2></div>
+       
       </div>
       
   </body>
