--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -2,10 +2,11 @@
   padding: 0;
   margin: 0;
 }
+body {
+  background-image: linear-gradient(#152238 10%, #000000 90%);
+}
 .main-header {
   font-family: "Comfortaa", cursive;
-  background-color: #183865;
-  background: linear-gradient(90deg, #000000 0%, #000220 10%, #183865 100%);
   width: 100%;
   height: 4rem;
   display: flex;
@@ -14,7 +15,7 @@
   flex-direction: row;
   color: white;
   font-size: 40px;
-  box-shadow: 3px 3px 5px 3px #ccc;
+  box-shadow: 3px 3px 5px 3px #0c131fb9;
 }
 
 .logo {
