Trabalhando o hub principal

--- a/src/includes/nav.ejs
+++ b/src/includes/nav.ejs
@@ -9,6 +9,8 @@
   <button id="side-menu-toggle">
     <span class="material-symbols-outlined"> menu </span>
   </button>
-  <span class="logo"><b>f</b>.ai</span>
+  <span class="logo">
+    <a href="/"><b>f</b>.ai</a>
+  </span>
 </header>
 <script src="/js/nav.js"></script>
