--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,6 +1,3 @@
-html {
-  height: 100%;
-}
 body {
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
@@ -74,4 +71,9 @@ div.main_card h2 {
   box-shadow: 5px 5px 5px 5px rgba(4, 25, 77, 0.277);
   border-radius: 10px;
   font-size: 15px;
+}
+.card_app h2,
+a {
+  text-decoration: none;
+  color: black;
 }
